src/sass/_fonts.scss
@use '../../node_modules/@fortawesome/fontawesome-svg-core/styles.css';

@font-face {
  font-family: Rubik;
  font-style: normal;
  src: url('/fonts/Rubik-VariableFont_wght.ttf');
  font-display: swap;
}

@font-face {
  font-family: Rubik;
  font-style: italic;
  src: url('/fonts/Rubik-Italic-VariableFont_wght.ttf');
  font-display: swap;
}

@font-face {
  font-family: Fraktion;
  src: url('/fonts/PPFraktionSans-Variable.ttf');
  font-weight: 1 999;
  font-display: swap;
}

@font-face {
  font-family: NeueMontreal;
  font-style: normal;
  font-weight: normal;
  font-display: swap;
  src: url('/fonts/PPNeueMontreal-Regular.woff2');
}

@font-face {
  font-family: NeueMontreal;
  font-style: normal;
  font-weight: lighter;
  font-display: swap;
  src: url('/fonts/PPNeueMontreal-Book.woff2');
}

@font-face {
  font-family: NeueMontreal;
  font-style: normal;
  font-weight: bold;
  font-display: swap;
  src: url('/fonts/PPNeueMontreal-Bold.woff2');
}

@font-face {
  font-family: NeueMontreal;
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url('/fonts/PPNeueMontreal-Medium.woff2') format('woff2');
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-black-webfont.woff2') format('woff2');
  font-weight: bolder;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-blackitalic-webfont.woff2') format('woff2');
  font-weight: bolder;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-bold-webfont.woff2') format('woff2');
  font-weight: bold;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-bolditalic-webfont.woff2') format('woff2');
  font-weight: bold;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-regular-webfont.woff2') format('woff2');
  font-weight: normal;
  font-display: swap;
  font-style: normal;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-regularitalic-webfont.woff2') format('woff2');
  font-weight: normal;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-semibold-webfont.woff2') format('woff2');
  font-weight: 500;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Novela;
  src: url('/fonts/novela-semibolditalic-webfont.woff2') format('woff2');
  font-weight: 500;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Lora;
  src: url('/fonts/Lora-VariableFont_wght.ttf') format('ttf');
  font-weight: 1 999;
  font-display: swap;
}

@font-face {
  font-family: Lora;
  src: url('/fonts/Lora-Italic-VariableFont_wght.ttf') format('truetype');
  font-weight: 1 999;
  font-display: swap;
  font-style: italic;
}

@font-face {
  font-family: Eiko;
  src: url('/fonts/PPEiko-Regular.ttf') format('truetype');
  font-weight: normal;
  font-display: swap;
}

@font-face {
  font-family: Eiko;
  src: url('/fonts/PPEiko-Heavy.ttf') format('truetype');
  font-weight: bold;
  font-display: swap;
}

@font-face {
  font-family: Eiko;
  src: url('/fonts/PPEiko-Medium.ttf') format('truetype');
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: Pine;
  src: url('/fonts/PineTree.otf') format('opentype');
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: Garamond;
  src: url('/fonts/EBGaramond-VariableFont_wght.ttf') format('truetype');
  font-weight: 1 999;
  font-display: swap;
}

@font-face {
  font-style: italic;
  font-family: Garamond;
  src: url('/fonts/EBGaramond-Italic-VariableFont_wght.ttf') format('truetype');
  font-display: swap;
  font-weight: 1 999;
}

@font-face {
  font-family: FiraCode;
  src: url('/fonts/FiraCode-VF.ttf') format('truetype');
  font-weight: 1 999;
  font-display: swap;
}

@font-face {
  font-family: NotoColorEmoji;
  src: url('/fonts/NotoColorEmoji-Regular.ttf') format('truetype');
}

$header: Novela, Lora, sans-serif;
$body: Garamond, Lora, NotoColorEmoji, serif;
$ui: Fraktion, Rubik, NotoColorEmoji, sans-serif;
$special: Pine, Novela, NotoColorEmoji, sans-serif;
$code: FiraCode, NotoColorEmoji, monospace;
$sans: NeueMontreal, NotoColorEmoji, sans-serif;

$s-2: clamp(0.774rem, 0.81rem + -0.048vi, 0.8rem);
$s-1: clamp(1rem, 0.989rem + 0.057vi, 1.032rem);
$s0: clamp(1.25rem, 1.205rem + 0.227vi, 1.375rem);
$s1: clamp(1.563rem, 1.464rem + 0.492vi, 1.833rem);
$s2: clamp(1.953rem, 1.775rem + 0.891vi, 2.443rem);
$s3: clamp(2.441rem, 2.145rem + 1.483vi, 3.257rem);
$s4: clamp(3.052rem, 2.583rem + 2.345vi, 4.341rem);
$s5: clamp(3.815rem, 3.097rem + 3.586vi, 5.787rem);
$s6: clamp(4.768rem, 3.697rem + 5.356vi, 7.714rem);

